# 13301338176-ml

./: README.md  url
AI_contests/: AI_contest
Android_Activity_recong/: Human Activity Recognition using LSTMs on Android — TensorFlow for Hackers (Part VI)-confusion-matrixpdf
C++-meta-program/: any.cpp  variadic-comma1-func.cpp  variadic-inher-class.cpp
ExtraSensory/: unbalance_weight.py  url
ION/: ION_architecture.dot  ION内存管理.doc
Linaro-git-tool/arm-probe/: Makefile.am  README  config  configure.ac
Linaro-git-tool/arm-probe/arm-probe/: arm-probe.c
Linaro-git-tool/arm-probe/libarmep/: protocol.c
Python-for-Signal-Processing/: url
Python_C++_caffe-tfskills/: valgrind-cmake.txt
RL-DOU/: Lux  Trepn_2017.09.30_214528.csv  decode_events.py  monkeyrunner_test.py  流明
Ridge_and_Lasso_Regression/: Ridge.py
Self-Taught-Learning/: url
TensorFlow-Books/: Untitled.ipynb  gpu.py
Transfer-Learning/: url
android_arch-design-log/: android1-10-110913042326-phpapp01.pptx
awesome/: url
bazel-project/: readme
cmake-gtest-pytest-ninja-android/: my_test1.cc  test_main.cc
cv/: README.md
decision_tree/: url
face/: Deep_Face_Recognition_with_Caffe_Implementation  github.comMTCNN_face_detection_alignment.git_url
google-detection-api/: Object_Detection_Tensorflow_API.ipynb  compare_feature-ori.py  object_detection_tutorial.ipynb
high_level-books/: README.md  machine_learning_data_set
id/: KSC2016 - Recurrent Neural Networks.pptx
image_segment/: url
mate10/: mate10
meta-program/: 1  2  variadic-comma2-func.cpp  variadic-recusive-func.cpp  (+2 more)
(+1916 files in other folders)
